examples/bad/InvalidIdentifier.pas
PROGRAM InvalidIdentifier;

BEGIN
	0abc(0);
END.
